# sigil

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: binance_live_demo.py  full_pipeline_demo.py
src/sigil/: __init__.py  cli.py  core.py
src/sigil/backtest/: __init__.py  harness.py
src/sigil/dashboard/: __init__.py  app.py
src/sigil/data/: __init__.py  binance.py  polymarket.py
src/sigil/indicators/: __init__.py  atr.py  bollinger.py  macd.py  moving_averages.py  rsi.py  stochastic.py  supertrend.py
src/sigil/mcp/: __init__.py  server.py
src/sigil/signals/: __init__.py  momentum.py  psd.py  reversion.py
tests/: test_backtest.py  test_core.py  test_indicators.py  test_mcp.py  test_signals.py
